--- a/src/app/Components/etudiant-dashboard/etudiant-dashboard.component.html
+++ b/src/app/Components/etudiant-dashboard/etudiant-dashboard.component.html
@@ -1,1 +1,4 @@
 <p>etudiant-dashboard works!</p>
+<button [routerLink]="['/etuNotes']">Voir les Notes</button>
+<button [routerLink]="['/etuAttest']">Voir attestation</button>
+<button (click)="logout()">Logout</button>
